; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/tlg2300/extr_pd-alsa.c_poseidon_audio_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/tlg2300/extr_pd-alsa.c_poseidon_audio_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.poseidon = type { %struct.poseidon_audio }
%struct.poseidon_audio = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @poseidon_audio_free(%struct.poseidon* %0) #0 {
  %2 = alloca %struct.poseidon*, align 8
  %3 = alloca %struct.poseidon_audio*, align 8
  store %struct.poseidon* %0, %struct.poseidon** %2, align 8
  %4 = load %struct.poseidon*, %struct.poseidon** %2, align 8
  %5 = getelementptr inbounds %struct.poseidon, %struct.poseidon* %4, i32 0, i32 0
  store %struct.poseidon_audio* %5, %struct.poseidon_audio** %3, align 8
  %6 = load %struct.poseidon_audio*, %struct.poseidon_audio** %3, align 8
  %7 = getelementptr inbounds %struct.poseidon_audio, %struct.poseidon_audio* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load %struct.poseidon_audio*, %struct.poseidon_audio** %3, align 8
  %12 = getelementptr inbounds %struct.poseidon_audio, %struct.poseidon_audio* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = call i32 @snd_card_free(i64 %13)
  br label %15

15:                                               ; preds = %10, %1
  ret i32 0
}

declare dso_local i32 @snd_card_free(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
